--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* --primary-color: rgb(159, 159, 236);
+  --secondary-color: #fff;
+  --third-color: rgb(180, 180, 238); */
+
+  --primary-color: rgb(77, 228, 228);
+  --secondary-color: rgb(0, 0, 0);
+  --third-color: rgb(171, 233, 233);
+  --button-primary-color: rgb(255, 220, 21);
+  --button-secondary-color: rgb(240, 209, 142);
+  --white-color: #fff;
+  --gray-color: rgb(171, 233, 233);
+  font-family: 'Lato', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  background-color: var(--white-color);
 }
